# ProjectHeartbeat

./: .gitignore  Comet.cpp  Comet.h  CometHail.cpp  CometHail.h  Constant.cpp  Constant.h  Effect.cpp  Effect.h  EffectManager.cpp  EffectManager.h  EffectSet.h  FullRainbow.cpp  FullRainbow.h  Heartbeat.cpp  Heartbeat.h  Meteor.cpp  Meteor.h  ProjectHeartbeat.ino  README.md  SetPixel.cpp  SetPixel.h  Util.cpp  Util.h  effect.conf  hsv.cpp  hsv.h
common/include/: .Effect.hpp.swp  Effect.hpp  EffectManager.hpp  FullRainbow.hpp  hsv.hpp
common/src/: .Effect.cpp.swp  Effect.cpp  EffectManager.cpp  FullRainbow.cpp
effect2gif/: CMakeLists.txt
effect2gif/include/: EffectImage.h
effect2gif/src/: EffectImage.cpp  main.cpp
effect_tests/: CMakeLists.txt
effect_tests/include/: ledwidget.h  ledwidget.hpp  viewer.h  viewer.hpp
effect_tests/src/: ledwidget.cpp  main.cpp  viewer.cpp
effect_tests/ui/: viewer.ui
stm32_controller/sketch/: sketch.ino
